--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "dpexelselectron",
-  "version": "1.0.0",
+  "version": "2.1.0",
   "description": "THIS IS A GUI PROGRAM FOR DOWNLOADING BULK QUANTITY OF IMAGES FORM PEXELS API",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=assets/icons/mac/icon.icns --prune=true --out=release-builds",
+    "package-win": "electron-packager . dPexels --overwrite --asar=true --platform=win32 --arch=ia32 --icon=assets/icons/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"dPexels\"",
+    "package-linux": "electron-packager . dPexels --overwrite --asar=true --platform=linux --arch=x64 --icon=assets/icons/png/1024x1024.png --prune=true --out=release-builds"
   },
   "repository": {
     "type": "git",
@@ -20,9 +22,12 @@
   "dependencies": {
     "axios": "^0.19.1",
     "electron-json-storage": "^4.1.8",
-    "pexels-api-wrapper": "^1.1.1"
+    "pexels-api-wrapper": "^1.1.1",
+    "request": "^2.88.0"
   },
   "devDependencies": {
-    "electron": "^7.1.9"
+    "electron": "^7.1.10",
+    "electron-builder": "^22.2.0",
+    "electron-packager": "^14.2.0"
   }
 }
